--- a/.github/workflows/gitartwork.yml
+++ b/.github/workflows/gitartwork.yml
@@ -12,7 +12,7 @@
        - uses: jasineri/gitartwork@v1
          with:
             # Use this username's contribution graph  
-            user_name: K-Karambit
+            user_name: Karamby
             # Text on contribution graph 
             text: Karamby
        - uses: jasineri/simple-push-action@v1
